--- a/src/app/shared/paginator/Paginator.dark.scss
+++ b/src/app/shared/paginator/Paginator.dark.scss
@@ -8,3 +8,12 @@
 .paginator__page-indicator {
     color: $primary-text-color;
 }
+
+.paginator__page-indicator__current-page-input {
+    color: #fff;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+
+    &:focus {
+        border-color: #fff;
+    }
+}
