--- a/src/app/shared/form/select/SelectedOptionList.dark.scss
+++ b/src/app/shared/form/select/SelectedOptionList.dark.scss
@@ -4,7 +4,7 @@
 .selected-option-list {
     border-bottom: 2px solid rgba(125, 125, 125, 0.5);
     border-top: 2px solid rgba(125, 125, 125, 0.5);
-    background-color: $theme-color;
+    background-color: scale-color($theme-color, $lightness: +5%);
 }
 
 .selected-option-list__option {
