--- a/src/app/shared/notification-banner/NotificationBanner.dark.scss
+++ b/src/app/shared/notification-banner/NotificationBanner.dark.scss
@@ -1,12 +1,12 @@
 @import 'NotificationBanner.common';
 
 .notification-banner.persistent .notification-banner__content {
-        background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(59, 40, 40, 0.8);
 }
 
 .notification-banner.not-persistent .notification-banner__content {
-        box-shadow: 0 -2px 5px #555;
-        background-color: rgba(0, 0, 0, 0.65);
+    box-shadow: 0 -10px 10px #2e2e2e;
+    background-color: rgba(59, 40, 40, 0.8);
 }
 
 .notification-banner__content {
