--- a/src/app/shared/tooltip/Tooltip.dark.scss
+++ b/src/app/shared/tooltip/Tooltip.dark.scss
@@ -1,7 +1,7 @@
 @import 'Tooltip.common';
 
 .td-tooltip {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 -0.5px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 3px 271e1e, 0 -0.5px 3px 271e1e;
     background-color: #555;
     color: #fff;
     border: 1px solid #8e8e8e;
@@ -10,6 +10,6 @@
 .td-tooltip__arrow::after {
     background-color: #555;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 2px 271e1e;
     border: 1px solid #8e8e8e;
 }
