--- a/src/app/shared/form/textarea/TextArea.common.scss
+++ b/src/app/shared/form/textarea/TextArea.common.scss
@@ -24,6 +24,64 @@
     vertical-align: top;
     transition: border-color 0.25s ease;
     outline: none;
+
+    &::before {
+        top: 0;
+        left: 0;
+        transform-origin: 0% 50%;
+    }
+
+    &::after {
+        border-bottom-right-radius: 10px;
+        right: 0;
+        top: 0;
+        transform-origin: 50% 0%;
+    }
+}
+
+.textarea__input-box,
+.textarea__input-box-focus-indicator {
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        display: inline-block;
+        transition: transform 0.5s 0s ease;
+    }
+
+    &::before {
+        width: 100%;
+        height: 3px;
+        transform: scale(0, 0);
+    }
+
+    &::after {
+        width: 3px;
+        height: 100%;
+        transform: scale(0, 0);
+    }
+}
+
+.textarea__input-box-focus-indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+
+    &::before {
+        left: 0;
+        bottom: 0;
+        transform-origin: 100% 50%;
+    }
+
+    &::after {
+        left: 0;
+        top: 0;
+        transform-origin: 50% 100%;
+    }
 }
 
 .textarea__input-box-resize-handle {
