--- a/src/app/shared/tabs/ActiveTabIndicator.dark.scss
+++ b/src/app/shared/tabs/ActiveTabIndicator.dark.scss
@@ -2,7 +2,7 @@
 @import 'ActiveTabIndicator.common';
 
 .tabgroup__active-tab-indicator {
-    border: 2px solid rgba(219, 221, 233, 0.502);
+    border: 2px solid rgb(149, 151, 160);
 
     &::after {
         background-color: $theme-color;
