--- a/src/app/simulation/simulation-labels/SimulationLabel.common.scss
+++ b/src/app/simulation/simulation-labels/SimulationLabel.common.scss
@@ -8,12 +8,9 @@
     font-size: 0.5em;
     max-width: 100vw;
 
-    th {
-        padding: 0;
-    }
-
+    th,
     td {
-        padding: 0 5px;
+        padding: 2px 5px;
     }
 
 }
