--- a/src/app/simulation/topology-renderer/views/node-searcher/NodeSearcher.common.scss
+++ b/src/app/simulation/topology-renderer/views/node-searcher/NodeSearcher.common.scss
@@ -104,6 +104,15 @@
         padding-bottom: 5px;
         flex-shrink: 0;
         margin-top: auto;
+
+        .paginator__page-indicator__current-page-input {
+            color: #fff;
+            border: 2px solid rgba(255, 255, 255, 0.5);
+
+            &:hover {
+                border-color: #fff;
+            }
+        }
     }
 }
 
