--- a/src/app/authentication/views/login-screen/LoginScreen.dark.scss
+++ b/src/app/authentication/views/login-screen/LoginScreen.dark.scss
@@ -2,4 +2,14 @@
 
 .login-screen {
     box-shadow: 50px 0px 20px 5px #c49292;
+
+    &::before {
+        display: inline-block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 1000px;
+        content: '';
+        box-shadow: 7px 0px 10px 0px #333;
+    }
 }
