--- a/src/app/simulation/measurement-chart/MeasurementChart.common.scss
+++ b/src/app/simulation/measurement-chart/MeasurementChart.common.scss
@@ -13,11 +13,11 @@
         width: 100%;
         height: 100%;
     }
+}
 
-    path.time-series-line {
-        fill: none;
-        stroke-width: 2px;
-    }
+.measurement-chart__canvas__time-series-line {
+    fill: none;
+    stroke-width: 2px;
 }
 
 .measurement-chart__legends {
