--- a/src/app/simulation/measurement-chart/MeasurementChart.dark.scss
+++ b/src/app/simulation/measurement-chart/MeasurementChart.dark.scss
@@ -1,20 +1,20 @@
 @import '@constants.dark';
 @import 'MeasurementChart.common';
 
-$time-series-colors: red green lightblue #b729ae orange pink magenta brown lightcoral;
+$time-series-colors: #fff #ff0 lightblue #f0f4c3 orange #00ff5f magenta brown lightcoral;
 
 .measurement-chart {
     border: 2px solid rgba(255, 255, 255, 0.35);
     background-color: $theme-color;
+}
 
-    @for $index from 1 through length($time-series-colors) {
-        path.time-series-line:nth-of-type(#{$index}) {
-            stroke: #{nth($time-series-colors, $index)};
-        }
+@for $index from 1 through length($time-series-colors) {
+    .measurement-chart__canvas__time-series-line:nth-of-type(#{$index}) {
+        stroke: #{nth($time-series-colors, $index)};
+    }
 
-        .measurement-chart__legend:nth-child(#{$index}) .measurement-chart__legend__color {
-            background-color: #{nth($time-series-colors, $index)};
-        }
+    .measurement-chart__legend:nth-child(#{$index}) .measurement-chart__legend__color {
+        background-color: #{nth($time-series-colors, $index)};
     }
 }
 
@@ -32,11 +32,6 @@ $time-series-colors: red green lightblue #b729ae orange pink magenta brown light
 }
 
 .measurement-chart__canvas {
-
-    .measurement-chart__canvas__axis-label {
-        fill: #edb3b3;
-    }
-
     .domain {
         stroke: #edb3b3
     }
@@ -50,4 +45,8 @@ $time-series-colors: red green lightblue #b729ae orange pink magenta brown light
             fill: #edb3b3;
         }
     }
+}
+
+.measurement-chart__canvas__axis-label {
+    fill: #edb3b3;
 }
