--- a/src/app/simulation/measurement-chart/MeasurementChart.light.scss
+++ b/src/app/simulation/measurement-chart/MeasurementChart.light.scss
@@ -6,15 +6,16 @@ $time-series-colors: red green blue #b729ae orange pink magenta brown lightcoral
 .measurement-chart {
     border: 2px solid rgba(0, 0, 0, 0.3);
     background-color: $theme-color;
+}
 
-    @for $index from 1 through length($time-series-colors) {
-        path.time-series-line:nth-of-type(#{$index}) {
-            stroke: #{nth($time-series-colors, $index)};
-        }
 
-        .measurement-chart__legend:nth-child(#{$index}) .measurement-chart__legend__color {
-            background-color: #{nth($time-series-colors, $index)};
-        }
+@for $index from 1 through length($time-series-colors) {
+    .measurement-chart__canvas__time-series-line:nth-of-type(#{$index}) {
+        stroke: #{nth($time-series-colors, $index)};
+    }
+
+    .measurement-chart__legend:nth-child(#{$index}) .measurement-chart__legend__color {
+        background-color: #{nth($time-series-colors, $index)};
     }
 }
 
