When editing a plot model, and selecting a component with only one phase, select this phase by default

--- a/src/app/simulation/simulation-configuration/views/simulation-configuration-tab/SimulationConfigurationTab.common.scss
+++ b/src/app/simulation/simulation-configuration/views/simulation-configuration-tab/SimulationConfigurationTab.common.scss
@@ -7,13 +7,15 @@
         border-radius: 50%;
         width: 20px;
         height: 20px;
-        transform: translate(-20px, -0.5px);
+        transform: translate(-35px, 0);
         padding: 0;
+        z-index: 15;
     }
 }
 
 .accompanying-text {
     font-size: 13px;
+
     div {
         font-weight: bold;
     }
