Show ripple when clicking on radio buttons

--- a/src/app/shared/form/checkbox/CheckBox.common.scss
+++ b/src/app/shared/form/checkbox/CheckBox.common.scss
@@ -19,7 +19,7 @@
     .form-control__label {
         order: 1;
         width: initial;
-        margin-left: 5px;
+        transform: translate(-10px);
     }
 
     .checkbox-wrapper {
