--- a/src/app/shared/form/radio/RadioButton.common.scss
+++ b/src/app/shared/form/radio/RadioButton.common.scss
@@ -5,17 +5,30 @@
 }
 
 .radio-button-group.style-default {
+    align-items: center;
+
+    .radio-button-group__radio-buttons {
+        transform: translate(-10px);
+    }
+
     .radio-button:not(:last-of-type) {
         margin-right: 50px;
     }
 
+
+    .radio-button__circle-container {
+        position: relative;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 1000px;
+    }
+
     .radio-button__input {
         position: absolute;
-        width: 100%;
-        height: 100%;
         opacity: 0;
-        cursor: pointer;
-        z-index: 1;
     }
 
     .radio-button__circle {
@@ -23,11 +36,11 @@
         width: 16px;
         height: 16px;
         border-radius: 100%;
-        top: 0;
-        margin-right: 5px;
+        cursor: pointer;
         display: inline-flex;
         justify-content: center;
         align-items: center;
+        flex-shrink: 0;
 
         &::after {
             content: '';
@@ -40,9 +53,13 @@
         }
     }
 
-    .radio-button__input:checked+.radio-button__circle::after {
+    .radio-button__input:checked+.radio-button__circle-container .radio-button__circle::after {
         transform: scale(5, 5);
         opacity: 1;
+    }
+
+    .radio-button__label {
+        cursor: pointer;
     }
 }
 
