--- a/src/app/shared/test-manager/command/CommandEventTable.common.scss
+++ b/src/app/shared/test-manager/command/CommandEventTable.common.scss
@@ -15,11 +15,10 @@
     font-size: 0.9em;
     text-align: center;
     white-space: nowrap;
-    padding: 0;
 }
 
 .command-event-table__difference-table {
-    border-collapse: collapse;
+    margin: -5px;
 }
 
 .command-event-table__difference-table__header {
