--- a/src/app/shared/form/select/SelectedOptionList.common.scss
+++ b/src/app/shared/form/select/SelectedOptionList.common.scss
@@ -4,6 +4,7 @@
     flex-flow: column;
     align-items: center;
     margin-top: 18px;
+    margin-bottom: 15px;
 
     .show-selected-option-list {
         position: absolute;
