--- a/src/app/shared/test-manager/fault/FaultEventTable.dark.scss
+++ b/src/app/shared/test-manager/fault/FaultEventTable.dark.scss
@@ -1,5 +1,2 @@
+@import '@constants.dark';
 @import 'FaultEventTable.common';
-
-.fault-event-table td>div:not(:last-of-type) {
-    border-bottom: 2px solid #cecece;
-}
