--- a/src/app/simulation/simulation-labels/SimulationLabel.light.scss
+++ b/src/app/simulation/simulation-labels/SimulationLabel.light.scss
@@ -5,4 +5,9 @@
     background-color: #555;
     color: #fff;
     border: 1px solid #8e8e8e;
+
+    th,
+    td {
+        border-color: #cecece;
+    }
 }
