--- a/src/app/available-applications-and-services/AvailableApplicationsAndServices.common.scss
+++ b/src/app/available-applications-and-services/AvailableApplicationsAndServices.common.scss
@@ -1,6 +1,3 @@
 .available-applications-and-services {
-    overflow: auto;
-    padding-top: 20px;
-    padding-left: 20px;
-    max-height: calc(100vh - 60px);
+    height: calc(100vh - 60px);
 }
