--- a/src/app/navigation/Navigation.common.scss
+++ b/src/app/navigation/Navigation.common.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    height: 100%;
 
     &:hover {
         text-decoration: none;
