--- a/src/app/simulation/simulation-configuration/views/test-configuration-tab/comm-outage/CommOutageEventForm.common.scss
+++ b/src/app/simulation/simulation-configuration/views/test-configuration-tab/comm-outage/CommOutageEventForm.common.scss
@@ -16,7 +16,6 @@
     td,
     th {
         font-size: 0.8em;
-        padding: 2px 5px;
     }
 
     th:first-of-type {
@@ -28,6 +27,6 @@
     }
 
     td>div {
-        padding: 0;
+        padding: 3px 0;
     }
 }
