--- a/src/global-styles.light.scss
+++ b/src/global-styles.light.scss
@@ -6,15 +6,37 @@ body {
 }
 
 thead {
-    background-color: $primary-color;
-    color: $primary-text-color;
-    border: 2px solid #cecece;
+    background-color: #ff879c;
+    color: #000;
+    border: 2px solid $table-border-color;
 }
 
 th {
-    border: 2px solid #cecece;
+    border: 2px solid $table-border-color;
 }
 
 td {
-    border: 2px solid #cecece;
+    border: 2px solid $table-border-color;
+
+    &>div:not(:last-of-type) {
+        border-bottom: 2px solid $table-border-color;
+    }
+}
+
+table {
+    tbody tr:nth-of-type(even) {
+        background-color: #ffc0cb;
+    }
+
+    tbody tr:nth-of-type(odd) {
+        background-color: $theme-color;
+    }
+
+    table thead tr {
+        background-color: #ff879c !important;
+    }
+
+    table tr:not(:last-of-type) {
+        border-bottom: 2px solid $table-border-color;
+    }
 }
