Show a new indicator during a simulation for the violations at value zero

--- a/src/app/simulation/voltage-violation/VoltageViolation.common.scss
+++ b/src/app/simulation/voltage-violation/VoltageViolation.common.scss
@@ -1,21 +1,34 @@
-.voltage-violation {
+.voltage-violations {
     position: absolute;
     right: 5px;
-    top: 95px;
-    z-index: 15;
-    display: flex;
-    font-size: 0.8em;
-    align-items: center;
-    justify-content: center;
+    top: 110px;
     z-index: 0;
 }
 
+.voltage-violation {
+    position: relative;
+    display: flex;
+    font-size: 0.8em;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 5px 0;
+    overflow: hidden;
+    border-radius: 1000px;
+}
+
 .voltage-violation__label {
+    position: relative;
+    left: 5px;
     padding: 5px 10px;
     padding-right: 15px;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
-    transform: translateX(5px);
+    overflow: hidden;
+    transition: transform 0.25s ease;
+    white-space: nowrap;
+    pointer-events: none;
+    transform: translateX(0);
 }
 
 .voltage-violation__counts {
@@ -27,4 +40,6 @@
     align-items: center;
     justify-content: center;
     box-shadow: 0px -0.5px 2px #555;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
