Programatically render capacitor symbols instead of using images

--- a/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -42,3 +42,7 @@
 .topology-renderer__non-existing-searched-node {
     color: #ffa500;
 }
+
+.topology-renderer__canvas__symbol.capacitor {
+    fill: none;
+}
