--- a/src/app/simulation/topology-renderer/TopologyRenderer.light.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.light.scss
@@ -9,9 +9,8 @@
     stroke: #000;
 }
 
-.topology-renderer__canvas__symbol.capacitor .topology-renderer__canvas__symbol__image {
-    background-image: url(./images/capacitor.light.svg);
-    background-repeat: no-repeat;
+.topology-renderer__canvas__symbol.capacitor {
+    stroke: #000;
 }
 
 .topology-renderer__canvas__symbol.regulator .topology-renderer__canvas__symbol__image {
