--- a/src/app/simulation/topology-renderer/views/capacitor-menu/CapacitorMenu.common.scss
+++ b/src/app/simulation/topology-renderer/views/capacitor-menu/CapacitorMenu.common.scss
@@ -3,6 +3,10 @@
         margin: 10px;
     }
 
+    .select {
+        align-items: center;
+    }
+
     .form-control__label {
         width: 7em;
     }
