Programatically render transformer symbols instead of using images

--- a/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
@@ -13,7 +13,8 @@
     fill: #ffa500;
 }
 
-.topology-renderer__canvas__symbol.capacitor {
+.topology-renderer__canvas__symbol.capacitor,
+.topology-renderer__canvas__symbol.transformer {
     stroke: #ffa500;
 }
 
@@ -24,10 +25,5 @@
 
 .topology-renderer__canvas__symbol.substation .topology-renderer__canvas__symbol__image {
     background-image: url(./images/substation.dark.svg);
-    background-repeat: no-repeat;
-}
-
-.topology-renderer__canvas__symbol.transformer .topology-renderer__canvas__symbol__image {
-    background-image: url(./images/transformer.dark.svg);
     background-repeat: no-repeat;
 }
