--- a/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -43,6 +43,7 @@
     color: #ffa500;
 }
 
-.topology-renderer__canvas__symbol.capacitor {
+.topology-renderer__canvas__symbol.capacitor,
+.topology-renderer__canvas__symbol.transformer {
     fill: none;
 }
