Programatically render regulator symbols instead of using images

--- a/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -44,6 +44,7 @@
 }
 
 .topology-renderer__canvas__symbol.capacitor,
-.topology-renderer__canvas__symbol.transformer {
-    fill: none;
+.topology-renderer__canvas__symbol.transformer,
+.topology-renderer__canvas__symbol.regulator {
+    fill: transparent;
 }
