Programatically render substation symbols instead of using images

--- a/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -45,6 +45,7 @@
 
 .topology-renderer__canvas__symbol.capacitor,
 .topology-renderer__canvas__symbol.transformer,
-.topology-renderer__canvas__symbol.regulator {
+.topology-renderer__canvas__symbol.regulator,
+.topology-renderer__canvas__symbol.substation {
     fill: transparent;
 }
