--- a/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
@@ -21,7 +21,8 @@
 
 .topology-renderer__canvas__symbol.capacitor,
 .topology-renderer__canvas__symbol.transformer,
-.topology-renderer__canvas__symbol.regulator {
+.topology-renderer__canvas__symbol.regulator,
+.topology-renderer__canvas__symbol.substation {
     stroke: #ffa500;
 }
 
