--- a/src/app/simulation/topology-renderer/TopologyRenderer.light.scss
+++ b/src/app/simulation/topology-renderer/TopologyRenderer.light.scss
@@ -16,7 +16,8 @@
 
 .topology-renderer__canvas__symbol.capacitor,
 .topology-renderer__canvas__symbol.transformer,
-.topology-renderer__canvas__symbol.regulator {
+.topology-renderer__canvas__symbol.regulator,
+.topology-renderer__canvas__symbol.substation {
     stroke: #000;
 }
 
