Animate the arrow down icon when opening select components

--- a/src/app/shared/form/select/Select.common.scss
+++ b/src/app/shared/form/select/Select.common.scss
@@ -55,7 +55,7 @@
         outline: none;
     }
 
-    &:focus i {
+    &.opened i {
         transform: rotate(180deg);
         font-weight: bold;
     }
