--- a/src/app/shared/form/select/Select.dark.scss
+++ b/src/app/shared/form/select/Select.dark.scss
@@ -17,7 +17,7 @@
         color: $primary-text-color;
     }
 
-    &:focus {
+    &.opened {
         box-shadow: 0px 0px 1px 2px rgba(#222, 0.8) inset;
     }
 }
