Fix dangling switches in rendering topologies

--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.common.scss
@@ -43,6 +43,10 @@
     color: #ffa500;
 }
 
+foreignObject.topology-renderer__canvas__symbol {
+    pointer-events: none;
+}
+
 .topology-renderer__canvas__symbol.capacitor,
 .topology-renderer__canvas__symbol.transformer,
 .topology-renderer__canvas__symbol.regulator,
