- Reset violation counts, all alarms, measurement charts when a simulation is started - Show a spinner when login is performed - Style select option list's scrollbar

--- a/frontend/src/app/shared/form/select/OptionList.common.scss
+++ b/frontend/src/app/shared/form/select/OptionList.common.scss
@@ -7,6 +7,15 @@
     &:empty {
         box-shadow: none;
     }
+
+    &::-webkit-scrollbar {
+        width: 10px;
+        border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+    }
 }
 
 .option-list__option {
