Add a button to locate the node associated with an alarm

--- a/frontend/src/app/simulation/alarms/Alarms.common.scss
+++ b/frontend/src/app/simulation/alarms/Alarms.common.scss
@@ -9,7 +9,7 @@
         margin-bottom: 15px;
     }
 
-    .alarm-action {
-        padding: 5px 0;
+    .alarms__action {
+        margin: 5px;
     }
 }
