--- a/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
+++ b/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
@@ -13,6 +13,10 @@
         width: 100%;
         height: 100%;
     }
+
+    .tick {
+        transition: transform 0.25s ease;
+    }
 }
 
 .measurement-chart__canvas__time-series-line {
