--- a/frontend/src/app/simulation/measurement-chart/MeasurementChart.dark.scss
+++ b/frontend/src/app/simulation/measurement-chart/MeasurementChart.dark.scss
@@ -47,6 +47,7 @@ $time-series-colors: #fff #ff0 lightblue #f0f4c3 orange #00ff5f magenta brown li
     }
 }
 
-.measurement-chart__canvas__axis-label {
+.measurement-chart__canvas__axis-label,
+.measurement-chart__canvas__overlapped-lines {
     fill: #edb3b3;
 }
