--- a/frontend/src/app/shared/notification/Notification.common.scss
+++ b/frontend/src/app/shared/notification/Notification.common.scss
@@ -1,36 +1,17 @@
-.notification-banner-container {
+.notification-container {
     position: fixed;
     width: 100vw;
     height: 100vh;
     pointer-events: none;
     z-index: 1000;
-}
-
-.notification-banner:empty {
-    display: none;
-}
-
-.notification-banner {
-    position: absolute;
-    z-index: 10000;
     left: 0;
-
-    .backdrop {
-        z-index: -1;
-    }
-}
-
-.notification-banner.persistent {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     top: 0;
 }
 
-.notification-banner.not-persistent {
-    position: fixed;
+.notification {
+    position: absolute;
+    z-index: 10000;
+    left: 0;
     bottom: 0;
     width: 100vw;
     animation-duration: 0.5s;
@@ -38,35 +19,37 @@
     animation-iteration-count: 1;
     pointer-events: all;
 
-    .notification-banner__content {
-        height: 120px;
-    }
-
     .icon-button {
         position: absolute;
         right: 10px;
         top: 10px;
     }
+
+    &:empty {
+        display: none;
+    }
+
 }
 
-.notification-banner.not-persistent.slide-in {
+.notification.slide-in {
     animation-name: slide-in;
     transform: translateY(0);
     opacity: 1;
 }
 
-.notification-banner.not-persistent.slide-out {
+.notification.slide-out {
     animation-name: slide-out;
     transform: translateY(100%);
     opacity: 0;
 }
 
-.notification-banner__content {
+.notification__content {
     text-align: center;
     font-size: 45px !important;
     padding: 20px 5px;
     box-sizing: border-box;
     width: 100%;
+    height: 120px;
 }
 
 @keyframes slide-in {
