--- a/frontend/src/app/simulation/topology-renderer/views/matched-node-locator/MatchedNodeLocator.common.scss
+++ b/frontend/src/app/simulation/topology-renderer/views/matched-node-locator/MatchedNodeLocator.common.scss
@@ -3,13 +3,16 @@
     width: 100vw;
     height: 100vh;
     z-index: 1000;
+
+    svg {
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+    }
 }
 
 .matched-node-locator__ripple {
     animation: ripple 4s ease infinite forwards;
-    transform-origin: 50% 50%;
-    border-radius: 100%;
-    position: absolute;
 
     @keyframes ripple {
         0% {
