--- a/frontend/src/app/simulation/topology-renderer/views/matched-node-locator/MatchedNodeLocator.light.scss
+++ b/frontend/src/app/simulation/topology-renderer/views/matched-node-locator/MatchedNodeLocator.light.scss
@@ -1,5 +1,5 @@
 @import 'MatchedNodeLocator.common';
 
 .matched-node-locator__ripple {
-    background-color: rgba(0, 0, 0, 0.7);
+    fill: rgba(0, 0, 0, 0.7);
 }
