--- a/frontend/src/app/App.common.scss
+++ b/frontend/src/app/App.common.scss
@@ -1,3 +1,5 @@
+@import '~codemirror/lib/codemirror.css';
+
 .topology-renderer-simulation-status-logger-measurement-graphs {
     display: flex;
     overflow: hidden;
