- Add a new validator to check for range membership - Render a squiggly line when a line of text in TextArea fails JSON validation

--- a/frontend/src/app/shared/form/textarea/TextArea.common.scss
+++ b/frontend/src/app/shared/form/textarea/TextArea.common.scss
@@ -12,6 +12,12 @@
     .CodeMirror-gutters {
         z-index: 0;
     }
+
+    .errored-line {
+        display: inline-block;
+        text-decoration-style: wavy;
+        text-decoration-line: underline;
+    }
 }
 
 .textarea__input-box-container {
