--- a/frontend/src/app/shared/form/textarea/TextArea.light.scss
+++ b/frontend/src/app/shared/form/textarea/TextArea.light.scss
@@ -22,6 +22,10 @@
             }
         }
     }
+
+    .errored-line {
+        text-decoration-color: #f00;
+    }
 }
 
 .textarea__input-box,
@@ -65,6 +69,10 @@
 
     .CodeMirror-linenumber {
         color: #dfdfdf;
+    }
+
+    .errored-line {
+        text-decoration-color: #dfdfdf;
     }
 
 }
