--- a/frontend/src/app/shared/backdrop/Backdrop.common.scss
+++ b/frontend/src/app/shared/backdrop/Backdrop.common.scss
@@ -12,6 +12,8 @@
     z-index: 15;
     visibility: hidden;
     opacity: 0;
+    pointer-events: all;
+    background-color: transparent;
 }
 
 .backdrop.visible {
