--- a/frontend/src/app/shared/dialog/Dialog.common.scss
+++ b/frontend/src/app/shared/dialog/Dialog.common.scss
@@ -1,5 +1,70 @@
+.dialog-container {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+    pointer-events: none;
+
+    &.centered {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .backdrop {
+        position: fixed;
+    }
+}
+
 .dialog {
+    transform-origin: 50% 50%;
+    position: fixed;
+    z-index: 24;
+    top: auto;
+    left: auto;
+    animation-duration: 300ms;
+    animation-timing-function: ease;
+    animation-fill-mode: forwards;
     max-width: 98vw;
     max-height: 98vh;
     border-radius: 5px;
+    pointer-events: all;
+}
+
+.dialog--entering {
+    animation-name: dialog--entering;
+}
+
+.dialog--leaving {
+    animation-name: dialog--leaving;
+}
+
+@keyframes dialog--entering {
+    from {
+        visibility: hidden;
+        opacity: 0;
+        transform: translateY(25px) scale(0.9, 0.9);
+    }
+
+    to {
+        visibility: visible;
+        opacity: 1;
+        transform: translateY(0) scale(1, 1);
+    }
+}
+
+@keyframes dialog--leaving {
+    from {
+        visibility: visible;
+        opacity: 1;
+        transform: translateY(0) scale(1, 1);
+    }
+
+    to {
+        visibility: hidden;
+        opacity: 0;
+        transform: translateY(25px) scale(0.9, 0.9);
+    }
 }
