--- a/frontend/src/app/settings/Settings.common.scss
+++ b/frontend/src/app/settings/Settings.common.scss
@@ -1,23 +1,15 @@
-.settings-menu-container {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-}
-
 .settings__trigger {
     cursor: pointer;
 }
 
 .settings__menu {
+    width: 270px;
     border-radius: 5px;
     display: flex;
     flex-flow: column;
     width: 250px;
-    margin-left: 50px;
-    padding: 5px 0;
+    margin: 10px 0;
+    padding: 0;
 
     &__item {
         margin: 0;
