Add support for JSON output value in TextArea in addition to plain text output value

--- a/frontend/src/app/shared/dialog/Dialog.common.scss
+++ b/frontend/src/app/shared/dialog/Dialog.common.scss
@@ -12,15 +12,11 @@
         justify-content: center;
         align-items: center;
     }
-
-    .backdrop {
-        position: fixed;
-    }
 }
 
 .dialog {
     transform-origin: 50% 50%;
-    position: fixed;
+    position: absolute;
     z-index: 24;
     top: auto;
     left: auto;
