- Add units on y axis depending the plot types - Fix overlapping line calculation bug, now use the scaled measurements to check for overlaps instead of the raw measurements

--- a/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
+++ b/frontend/src/app/simulation/measurement-chart/MeasurementChart.common.scss
@@ -57,6 +57,11 @@
     margin-left: 5px;
 }
 
+.measurement-chart__canvas__axis-label {
+    font-size: 1em;
+    font-weight: bolder;
+}
+
 .measurement-chart__canvas__overlapped-lines {
     font-size: 0.5em;
 }
