--- a/frontend/src/app/shared/dialog/Dialog.common.scss
+++ b/frontend/src/app/shared/dialog/Dialog.common.scss
@@ -5,12 +5,18 @@
     left: 0;
     top: 0;
     z-index: 1000;
+    opacity: 0;
     pointer-events: none;
 
     &.centered {
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    &.active {
+        opacity: 1;
+        pointer-events: all;
     }
 }
 
@@ -23,10 +29,9 @@
     animation-duration: 300ms;
     animation-timing-function: ease;
     animation-fill-mode: forwards;
-    max-width: 98vw;
-    max-height: 98vh;
+    max-width: 100vw;
+    max-height: 100vh;
     border-radius: 5px;
-    pointer-events: all;
 }
 
 .dialog--entering {
