--- a/frontend/src/app/shared/tabs/TabGroup.common.scss
+++ b/frontend/src/app/shared/tabs/TabGroup.common.scss
@@ -40,7 +40,7 @@
     width: 100%;
     height: 100%;
     max-height: 100%;
-    overflow: hidden auto;
+    overflow: hidden;
 }
 
 .tab-group__body__slider {
@@ -58,5 +58,5 @@
     position: relative;
     box-sizing: border-box;
     flex-shrink: 0;
-    overflow: auto;
+    overflow: hidden;
 }
