--- a/frontend/src/app/simulation/applications/AvailableApplicationList.common.scss
+++ b/frontend/src/app/simulation/applications/AvailableApplicationList.common.scss
@@ -1,4 +1,7 @@
 .available-application-list {
+    overflow: auto;
+    max-width: 100%;
+    max-height: 100%;
     position: relative;
     display: flex;
     align-items: center;
