--- a/frontend/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
+++ b/frontend/src/app/simulation/topology-renderer/TopologyRenderer.dark.scss
@@ -1,5 +1,30 @@
 @import 'TopologyRenderer.common';
 
+.topology-renderer {
+
+    &.small,
+    &.large {
+        .topology-renderer__canvas__edge.no-power {
+            stroke: #f00;
+        }
+
+        .topology-renderer__canvas__node.no-power {
+            fill: #f00;
+        }
+
+        .topology-renderer__canvas__symbol.no-power.capacitor,
+        .topology-renderer__canvas__symbol.no-power.transformer,
+        .topology-renderer__canvas__symbol.no-power.regulator,
+        .topology-renderer__canvas__symbol.no-power.substation {
+            stroke: #f00;
+        }
+
+        .topology-renderer__canvas__symbol.no-power.switch {
+            fill: #f00;
+        }
+    }
+}
+
 .topology-renderer__toolbox {
     box-shadow: 0 0 3px #555;
     background-color: rgb(233, 204, 204);
@@ -24,4 +49,15 @@
 .topology-renderer__canvas__symbol.regulator,
 .topology-renderer__canvas__symbol.substation {
     stroke: #ffa500;
+}
+
+.topology-renderer__canvas__node.switch,
+.topology-renderer__canvas__symbol.switch {
+    &.open {
+        fill: #4aff4a;
+    }
+
+    &.closed {
+        fill: #f00;
+    }
 }
